@@ -1,3 +1,5 @@
+ * Fix crash in filename lookup
+
 KeePassDroid (1.99.7.2)
  * Even better fix for recent file history
  
